--- a/fms/templates/navbar.html
+++ b/fms/templates/navbar.html
@@ -4,3 +4,5 @@
 <form action="{% url 'home' %}" method="GET">
     <input type="search" name="q" placeholder="Поиск..."/>
 </form>
+
+<a href="{% url 'login' %}">Вход/Регистрация</a>
