--- a/fms/base/templates/base/home.html
+++ b/fms/base/templates/base/home.html
@@ -34,8 +34,10 @@
             <div>
                 {% for room in rooms %}
                     <div>
+                        {% if request.user == room.user %}
                         <a href="{% url 'update-room' room.id %}">Редактировать</a>
                         <a href="{% url 'delete-room' room.id %}">Удалить</a>
+                        {% endif %}
                         <span>@{{room.user.username}}</span>
                         <h4>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
                         <small>{{room.topic}}</small>
