--- a/fms/base/templates/base/login.html
+++ b/fms/base/templates/base/login.html
@@ -1,11 +1,12 @@
 {% extends 'main.html' %}
 
 {% block content %}
+{% if page == 'login' %}
 <div>
+    <h1>Вход</h1>
+
     <form action="" method="POST">
         {% csrf_token %}
-
-        <h1>Вход/Регистрация</h1>
 
         <label>Пользователь:</label>
         <input type="text" name="username"/>
@@ -14,8 +15,27 @@
         <input type="password" name="password" />
 
         <input type="submit" value="Вход"/>
-
     </form>
+
+    <p>Вы еще не зарегистрированы?</p>
+    <a href="{% url 'register' %}">Регистрация</a>
 </div>
+
+{% else %}
+<div>
+    <h1>Регистрация</h1>
+
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <input type="submit" value="Зарегистрироваться"/>
+    </form>
+
+    <p>Вы уже зарегистрированы?</p>
+    <a href="{% url 'login' %}">Войти</a>
+</div>
+
+{%endif%}
 
 {% endblock %}
