--- a/fms/templates/navbar.html
+++ b/fms/templates/navbar.html
@@ -6,6 +6,7 @@
 </form>
 
 {% if request.user.is_authenticated %}
+<h4>Добро пожаловать, {{request.user}}!</h4>
 <a href="{% url 'logout' %}">Выход</a>
 {% else %}
 <a href="{% url 'login' %}">Вход/Регистрация</a>
