--- a/fms/base/templates/base/room_page.html
+++ b/fms/base/templates/base/room_page.html
@@ -5,26 +5,43 @@
 
     <p>{{room.description}}</p>
 
-    <div class="comment-wrapper">
-        <h2>Беседа</h2>
-        <hr>
-
-        {% for message in msgs %}
-            <div>
-                <small>@{{message.user}} | {{message.created}}</small>
-                <h4>{{message.body}}</h4>
+            <div class="comment-wrapper">
+                <h2>Беседа</h2>
                 <hr>
+
+                {% for message in msgs %}
+                    <div>
+                        {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Удалить</a>
+                        {% endif %}
+                        <small>@{{message.user}} | {{message.created}}</small>
+                        <h4>{{message.body}}</h4>
+                        <hr>
+                    </div>
+                {% endfor %}
             </div>
-        {% endfor %}
-    </div>
 
-    {% if request.user.is_authenticated %}
-    <div class="comment-form">
-        <form action="" method="POST">
-            {% csrf_token %}
+            {% if request.user.is_authenticated %}
+            <div class="comment-form">
+                <form action="" method="POST">
+                    {% csrf_token %}
 
-            <input type="text" name="body" placeholder="Введите сообщение..."/>
-        </form>
+                    <input type="text" name="body" placeholder="Введите сообщение..."/>
+                </form>
+            </div>
+            {% endif %}
+        </div>
+
+        <div>
+            <h3>Собеседники</h3>
+            <hr>
+            {% for user in participants %}
+                <div>
+                    <h4>{{user.username}}</h4>
+                </div>
+            {% endfor %}
+        </div>
+
+
     </div>
-    {% endif %}
 {% endblock %}
