--- a/fms/base/templates/base/home.html
+++ b/fms/base/templates/base/home.html
@@ -6,7 +6,7 @@
     <style>
         .home-container {
         display: grid;
-        grid-template-columns: 1fr 4fr;
+        grid-template-columns: 1fr 3fr 1fr;
         }
     </style>
 
@@ -14,7 +14,7 @@
     <div class="home-container">
 
         <div>
-            <h3>Темы</h3>
+            <h2>Темы</h2>
             <hr>
             <div>
                 <a href="{% url 'home' %}">Все</a>
@@ -28,23 +28,41 @@
         </div>
 
         <div>
+            <h2>Комнаты</h2>
             <a href="{% url 'create-room' %}">Создать комнату</a>
             <h4>Всего комнат: {{count_rooms}}</h4>
 
             <div>
                 {% for room in rooms %}
                     <div>
+                        <span><b>@{{room.user.username}}</b></span>
                         {% if request.user == room.user %}
-                        <a href="{% url 'update-room' room.id %}">Редактировать</a>
-                        <a href="{% url 'delete-room' room.id %}">Удалить</a>
+                            <a href="{% url 'update-room' room.id %}">Редактировать</a>
+                            <a href="{% url 'delete-room' room.id %}">Удалить</a>
                         {% endif %}
-                        <span>@{{room.user.username}}</span>
-                        <h4>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
+                        <h4><a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
                         <small>{{room.topic}}</small>
                         <hr>
                     </div>
                 {% endfor %}
             </div>
+        </div>
+
+        <div>
+            <h2>Недавняя активность</h2>
+            <hr>
+
+            {% for message in msgs %}
+                <div>
+                    <small>{{message.user}} | {{message.created}}</small>
+                    <small><b>{{message.room}}</b></small>
+                    <p>{{message}}</p>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Удалить</a>
+                    {% endif %}
+                    <hr>
+                </div>
+            {% endfor %}
         </div>
 
     </div>
