transition to the "Profile" page when clicking on a user icon

--- a/fms/base/templates/base/activity_block.html
+++ b/fms/base/templates/base/activity_block.html
@@ -3,7 +3,7 @@
 
 {% for message in msgs %}
     <div>
-        <small>{{message.user}} | {{message.created}}</small>
+        <small><a href="{% url 'profile' message.user.id %}">{{message.user}}</a> | {{message.created}}</small>
         <small><b>{{message.room}}</b></small>
         <p>{{message}}</p>
         {% if request.user == message.user %}
