--- a/fms/base/templates/base/room_page.html
+++ b/fms/base/templates/base/room_page.html
@@ -24,7 +24,9 @@
                         {% if request.user == message.user %}
                         <a href="{% url 'delete-message' message.id %}">Удалить</a>
                         {% endif %}
-                        <small>@{{message.user}} | {{message.created}}</small>
+                        <small>
+                            <a href="{% url 'profile' message.user.id %}">@{{message.user}}</a> | {{message.created}}
+                        </small>
                         <h4>{{message.body}}</h4>
                         <hr>
                     </div>
