--- a/fms/templates/navbar.html
+++ b/fms/templates/navbar.html
@@ -1,13 +1,38 @@
-<a href="/"><h1>LOGO</h1></a>
-<hr>
+{% load static %}
 
-<form action="{% url 'home' %}" method="GET">
-    <input type="search" name="q" placeholder="Поиск..."/>
-</form>
+<header class="p-3 mb-2 rounded-3 border border-secondary border-1" style="background-color: #d0e4f4">
+    <div class="container-fluid d-grid gap-2" style="grid-template-columns: 1fr 2fr; ">
+      <div class="dropdown">
+        <a href="{% url 'home' %}" class="d-flex align-items-center col-lg-2 mb-2 mb-lg-0 text-dark text-decoration-none">
+          <img src="{% static 'images/logo.svg' %}" width="50" height="50"/>
+          <h1>ForMedStud</h1>
+        </a>
+      </div>
 
-{% if request.user.is_authenticated %}
-<h4>Добро пожаловать, {{request.user}}!</h4>
-<a href="{% url 'logout' %}">Выход</a>
-{% else %}
-<a href="{% url 'login' %}">Вход/Регистрация</a>
-{% endif %}
+      <div class="d-flex align-items-center">
+        <form class="w-100 me-4" action="{% url 'home' %}" method="GET">
+          <input type="search" class="form-control" name="q" placeholder="Поиск..." aria-label="Поиск">
+        </form>
+
+        <div class="flex-shrink-0 dropdown">
+          {% if request.user.is_authenticated %}
+          <a class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="{% static 'images/avatar.svg' %}" alt="mdo" width="44" height="44" class="rounded-circle">
+          </a>
+            <ul class="dropdown-menu text-small white" aria-labelledby="dropdownUser2">
+              <li><a class="dropdown-item" href="{% url 'create-room' %}">Создать комнату</a></li>
+              <li><a class="dropdown-item" href="{% url 'profile' request.user.id %}">Мой профиль</a></li>
+              <li><a class="dropdown-item" href="#">Редактировать профиль</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Выход</a></li>
+            </ul>
+          {% else %}
+            <button type="button" class="btn btn-outline-primary me-2">
+              <a href="{% url 'login' %}">Вход/Регистрация</a>
+            </button>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+</header>
+
